Pre-Battle-Commit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Pokemno Fire Red online</title>
     <link href="styles/global.css" type="text/css" rel="stylesheet" />
     <link href="styles/TextMessage.css" type="text/css" rel="stylesheet" />
+    <link href="styles/SceneTransition.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,6 +30,7 @@
     <script src="TextMessage.js"></script>
     <script src="KeyPressListener.js"></script>
     <script src="RevealingText.js"></script>
+    <script src="SceneTransition.js"></script>
     <script src="init.js"></script>
   </body>
 </html>
