Preparation for battle incoming

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link href="styles/global.css" type="text/css" rel="stylesheet" />
     <link href="styles/TextMessage.css" type="text/css" rel="stylesheet" />
     <link href="styles/SceneTransition.css" type="text/css" rel="stylesheet" />
+    <link href="styles/Battle.css" type="text/css" rel="stylesheet" />
+    <link href="styles/Combatant.css" type="text/css" rel="stylesheet" />
+    <link href="styles/SubmissionMenu.css" type="text/css" rel="stylesheet" />
+    <link href="styles/TextMessage.css" type="text/css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,6 +35,12 @@
     <script src="KeyPressListener.js"></script>
     <script src="RevealingText.js"></script>
     <script src="SceneTransition.js"></script>
+
+    <script src="Battle/Battle.js"></script>
+    <script src="Battle/Combatant.js"></script>
+    <script src="Battle/SubmissionMenu.js"></script>
+    <script src="Battle/Team.js"></script>
+
     <script src="init.js"></script>
   </body>
 </html>
