--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Pokemno Fire Red online</title>
+    <title>Pokemon Fire Red online</title>
     <link href="styles/global.css" type="text/css" rel="stylesheet" />
     <link href="styles/TextMessage.css" type="text/css" rel="stylesheet" />
     <link href="styles/SceneTransition.css" type="text/css" rel="stylesheet" />
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="game-container">
-      <canvas class="game-canvas" width="608" height="416"></canvas>
+      <canvas class="game-canvas" width="480" height="320"></canvas>
     </div>
 
     <script src="const.js"></script>
