Hud and player placed along the screen

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <canvas class="game-canvas" width="480" height="320"></canvas>
     </div>
 
+    <script src="content/pokemons.js"></script>
+
     <script src="const.js"></script>
     <script src="utils.js"></script>
     <script src="DirectionInput.js"></script>
