--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <script src="content/pokemons.js"></script>
+    <script src="content/actions.js"></script>
 
     <script src="const.js"></script>
     <script src="utils.js"></script>
@@ -42,6 +43,10 @@
     <script src="Battle/Combatant.js"></script>
     <script src="Battle/SubmissionMenu.js"></script>
     <script src="Battle/Team.js"></script>
+    <script src="Battle/BattleEvent.js"></script>
+    <script src="Battle/TurnCycle.js"></script>
+    <script src="Battle/BattleTextMessage.js"></script>
+    <script src="Battle/BattleAnimations.js"></script>
 
     <script src="init.js"></script>
   </body>
